--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,11 +2,8 @@
 
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
-dock_3="Scene,Import"
 dock_3_selected_tab_idx=0
-dock_4="FileSystem"
 dock_4_selected_tab_idx=0
-dock_5="Inspector,Node,History"
 dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
@@ -22,8 +19,11 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://bin/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://bin/")
+dock_3="Scene,Import"
+dock_4="FileSystem"
+dock_5="Inspector,Node,History"
 
 [EditorNode]
 
