--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -6,3 +6,11 @@ executable_path="C:/Program Files (x86)/Steam/steamapps/common/Godot Engine/godo
 
 run_live_debug=true
 run_reload_scripts=true
+
+[linked_properties]
+
+Node3D:scale=true
+
+[dialog_bounds]
+
+create_new_node=Rect2(510, 190, 900, 700)
