--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/a.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/main.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://textures/", "res://textures/coins/", "res://shaders/", "res://scenes/", "res://models/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,10 +27,10 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/a.tscn")
+open_scenes=PackedStringArray("res://scenes/main.tscn")
 center_split_offset=-234
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 current_scene="res://scenes/main.tscn"
 selected_bottom_panel_item=0
 
