--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,17 +28,17 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/main.tscn")
-center_split_offset=-234
+center_split_offset=-245
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 current_scene="res://scenes/main.tscn"
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/coin.gd", "res://scripts/pyshics.gd"]
 selected_script="res://scripts/pyshics.gd"
-open_help=["ImporterMesh", "MeshInstance3D"]
+open_help=["Camera3D", "ImporterMesh", "MeshInstance3D", "PhysicsDirectSpaceState2D", "PhysicsRayQueryParameters2D"]
 script_split_offset=70
 list_split_offset=0
 
