--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/main.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://textures/", "res://textures/coins/", "res://shaders/", "res://scenes/", "res://models/")
+dock_filesystem_selected_paths=PackedStringArray("res://shaders/environment.tres")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://textures/coins/", "res://shaders/", "res://scenes/", "res://models/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -32,13 +32,13 @@ center_split_offset=-245
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 current_scene="res://scenes/main.tscn"
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/coin.gd", "res://scripts/pyshics.gd"]
 selected_script="res://scripts/pyshics.gd"
-open_help=["Camera3D", "ImporterMesh", "MeshInstance3D", "PhysicsDirectSpaceState2D", "PhysicsRayQueryParameters2D"]
+open_help=["Camera3D", "GLTFPhysicsBody"]
 script_split_offset=70
 list_split_offset=0
 
