--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://shaders/environment.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://textures/coins/", "res://shaders/", "res://scenes/", "res://models/")
+dock_filesystem_selected_paths=PackedStringArray("res://shaders/coin.tres")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://textures/coins/", "res://shaders/", "res://scripts/", "res://scenes/", "res://models/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -30,15 +30,15 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://scenes/main.tscn")
 center_split_offset=-245
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 current_scene="res://scenes/main.tscn"
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/coin.gd", "res://scripts/pyshics.gd"]
-selected_script="res://scripts/pyshics.gd"
-open_help=["Camera3D", "GLTFPhysicsBody"]
+open_scripts=["res://scripts/coin.gd", "res://scripts/functions.gd"]
+selected_script=""
+open_help=["\"scripts/functions.gd\"", "Area3D", "BaseMaterial3D", "Camera3D", "CollisionObject3D", "ConcavePolygonShape3D", "GLTFPhysicsBody", "PhysicsBody3D"]
 script_split_offset=70
 list_split_offset=0
 
