--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,16 +29,16 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://scenes/main.tscn")
 center_split_offset=-245
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
 current_scene="res://scenes/main.tscn"
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/coin.gd", "res://scripts/functions.gd"]
-selected_script=""
-open_help=["\"scripts/functions.gd\"", "Area3D", "BaseMaterial3D", "Camera3D", "CollisionObject3D", "ConcavePolygonShape3D", "GLTFPhysicsBody", "PhysicsBody3D"]
+selected_script="res://scripts/coin.gd"
+open_help=["Area3D", "BaseMaterial3D", "Camera3D", "CollisionObject3D", "ConcavePolygonShape3D", "GLTFPhysicsBody", "PhysicsBody3D", "PhysicsServer3D", "RigidBody3D"]
 script_split_offset=70
 list_split_offset=0
 
