--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -29,16 +29,16 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://scenes/main.tscn")
 center_split_offset=-245
-selected_default_debugger_tab_idx=1
-selected_main_editor_idx=1
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=2
 current_scene="res://scenes/main.tscn"
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/coin.gd", "res://scripts/functions.gd"]
-selected_script="res://scripts/coin.gd"
-open_help=["Area3D", "BaseMaterial3D", "Camera3D", "CollisionObject3D", "ConcavePolygonShape3D", "GLTFPhysicsBody", "PhysicsBody3D", "PhysicsServer3D", "RigidBody3D"]
+open_scripts=["res://scripts/functions.gd"]
+selected_script="res://scripts/functions.gd"
+open_help=["CollisionObject2D"]
 script_split_offset=70
 list_split_offset=0
 
