--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://shaders/coin.tres")
+dock_filesystem_selected_paths=PackedStringArray("res://models/coin.gltf")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://textures/coins/", "res://shaders/", "res://scripts/", "res://scenes/", "res://models/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -30,7 +30,7 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://scenes/main.tscn")
 center_split_offset=-245
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 current_scene="res://scenes/main.tscn"
 selected_bottom_panel_item=0
 
