--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -30,14 +30,14 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://scenes/main.tscn")
 center_split_offset=-245
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 current_scene="res://scenes/main.tscn"
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/functions.gd", "res://scripts/time.gd"]
-selected_script="res://scripts/time.gd"
+selected_script="res://scripts/functions.gd"
 open_help=["CollisionObject2D", "GLTFNode"]
 script_split_offset=70
 list_split_offset=0
